<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Global Settings"
        app:icon="@drawable/baseline_settings_24">

        <SwitchPreferenceCompat
            app:key="Darkmode"
            app:title="Dark Mode" />
        <SwitchPreferenceCompat
            app:key="ActivateAccount"
            app:title="Acctivate Account" />
        <SwitchPreferenceCompat
            app:key="2FA"
            app:title="2FA" />

        <ListPreference
            app:key="language"
            app:title="Language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/baseline_message_24">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/baseline_sync_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>