<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ENSAKConnect.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ENSAKConnect.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Profile" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/banner_content_description"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/userProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="110dp"
                android:background="@drawable/circle_background"
                android:contentDescription="@string/user_profile_image"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:scaleType="centerCrop" />


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userProfileImage"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_utilisateur"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/userDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_details"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/share"
                        style="@style/ButtonPrimarySecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/share" />
                </LinearLayout>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModifyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonPrimarySecondarySmall"
                android:layout_below="@id/bannerImage"
                android:layout_alignEnd="@id/bannerImage"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/modify_my_profile" />

            <TextView
                android:id="@+id/userDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/static_description"
                android:textSize="14sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resumebtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/ButtonPrimary"
                android:layout_below="@+id/userDescription"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/voir_le_cv" />

            <LinearLayout
                android:id="@+id/experiencesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/resumebtn"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/experienceProfessionel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exp_rience_professionnelles"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/modify_experience_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonPrimarySecondarySmall"
                        android:text="@string/button_text" />


                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/experienceRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/parcoursContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/experiencesContainer"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/parcoursEducatif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parcours_educatif"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/modify_education_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonPrimarySecondarySmall"
                        android:text="@string/button_text" />


                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/educationRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/parcoursContainer"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/skills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skills"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/modify_skills_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonPrimarySecondarySmall"
                        android:text="@string/button_text" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/skillsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:scrollbars="vertical" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>