<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.question_post.show.ShowQuestionPost">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ENSAKConnect.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ENSAKConnect.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Question" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:paddingHorizontal="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="48dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/crdUserData"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginRight="12dp"
                            android:elevation="0dp"
                            app:cardCornerRadius="40dp">

                            <ImageView
                                android:id="@+id/iv_user_image"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/profile_picture_placeholder" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:textSize="14sp"
                                android:text="John Doe"
                                android:textColor="@color/black" />


                            <TextView
                                android:id="@+id/tv_user_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textSize="10sp"
                                android:text="John Doe's title" />

                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_tag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Q&amp;A"
                            android:textSize="10sp"
                            style="@style/PostChipQna" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_time_ago"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray_600"
                            android:textSize="12sp"
                            android:text="5h" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="0"
                            android:src="@drawable/ic_info" />
                    </LinearLayout>


                </LinearLayout>



                <TextView
                    android:id="@+id/tv_body"
                    style="@style/Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:paddingVertical="8dp"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum ipsum sed neque finibus, sed commodo nunc accumsan. Fusce malesuada pretium felis ut iaculis. Fusce bibendum dapibus pellentesque. In et mauris augue. Praesent porttitor arcu vel erat fringilla accums"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/grey_500"
                    android:text="#JEE #java #web #postgresql" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/feed_ic_size"
                            android:layout_height="@dimen/feed_ic_size"
                            android:layout_marginEnd="@dimen/feed_ic_margin"
                            android:src="@drawable/ic_thumb_up"
                            app:tint="@color/grey_700" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/feed_text_interaction_size"
                            android:textColor="@color/grey_700"
                            android:text="@string/like" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/ll_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/feed_ic_size"
                            android:layout_height="@dimen/feed_ic_size"
                            android:layout_marginEnd="@dimen/feed_ic_margin"
                            android:src="@drawable/ic_chat"
                            app:tint="@color/grey_700"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/comments"
                            android:textSize="@dimen/feed_text_interaction_size"
                            android:textColor="@color/grey_700"/>
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <LinearLayout
                        android:id="@+id/ll_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/feed_ic_size"
                            android:layout_height="@dimen/feed_ic_size"
                            android:layout_marginEnd="@dimen/feed_ic_margin"
                            android:src="@drawable/ic_share"
                            app:tint="@color/grey_700"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/feed_text_interaction_size"
                            android:text="@string/share"
                            android:textColor="@color/grey_700"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Answers"
                    style="@style/Heading4"
                    android:layout_marginBottom="16dp"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvComments"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/question_post_answer_item" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>